i should probably spot messing with this class but i can't help it